<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom" >

    <RelativeLayout
        android:id="@+id/rlActionSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/desc_rounded_no_padding_back" >

        <TextView
            android:id="@+id/tvActionSheetTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            android:text="@string/action_sheet_default"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvButtonExample"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/tvActionSheetTitle"
            android:layout_margin="5dp"
            android:background="@drawable/desc_rounded_no_padding"
            android:gravity="center"
            android:text="@string/choose_photo"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/tvButtonExample"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/desc_rounded_no_padding_black"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="15sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/tvCancel" />
    </RelativeLayout>

</RelativeLayout>