<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f6f6f6"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="300dp"
                android:background="#1c1c1c" >

                <ImageView
                    android:id="@+id/ivPhoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="55dp"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/textTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/Submit_a_photo"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                         />
                </FrameLayout>
            </FrameLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/editName"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="#00ffffff"
                        android:hint="@string/enter_name"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#b2b2b2" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="#00ffffff"
                        android:hint="@string/enter_email"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#b2b2b2" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/editCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_weight="1"
                        android:background="#00ffffff"
                        android:hint="@string/enter_caption"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </LinearLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:background="#b2b2b2" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/btn_round_cancel"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/btn_round_submit"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>